# ascope

./: .editorconfig  Cargo.toml  README.md
.github/: release-body.md  release-notes-v0.7.0.md
.github/workflows/: ci.yml  release.yml
examples/plugins/docker/: init.lua  plugin.toml
examples/plugins/fzf/: init.lua  plugin.toml
examples/plugins/ssh/: init.lua  plugin.toml
examples/plugins/tmux/: init.lua  plugin.toml
examples/plugins/tmux-bookmark/: init.lua  plugin.toml
examples/plugins/zoxide/: init.lua  plugin.toml
src/: app.rs  config.rs  git.rs  lib.rs  main.rs  navigation.rs  preview.rs
src/config/: session.rs
src/fs/: mod.rs  walker.rs
src/plugin/: commands.rs  engine.rs  manifest.rs
src/project/: detector.rs
src/search/: ripgrep.rs
src/shell/: ascope.ps1  ascope.sh  mod.rs
src/ui/: event.rs  layout.rs  mod.rs  widgets.rs
tests/: bat_preview_tests.rs  command_palette_tests.rs  navigation_integration.rs  on_demand_analysis_tests.rs  plugin_commands_tests.rs  plugin_engine_tests.rs  plugin_integration_tests.rs  plugin_manifest_tests.rs  plugin_queue_tests.rs  preview_state_tests.rs  project_detector_tests.rs  release_workflow.rs  ripgrep_tests.rs  search_overlay_tests.rs  session_config_tests.rs
