[package]
name = "ascope"
version = "0.1.0"
edition = "2021"

[dependencies]
clap     = { version = "4.4.0", features = ["derive"] }
jwalk    = "0.8.1"
serde    = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui  = "0.26.1"
crossterm = "0.27.0"
syntect  = "5.1.0"

[dev-dependencies]
tempfile = "3"
