[package]
name = "ascope"
version = "0.9.0"

edition = "2021"
authors = ["Ahmed Ashour"]
description = "Blazingly fast terminal workspace inspector and navigation utility"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AuraEG/ascope"
readme = "README.md"

[dependencies]
clap     = { version = "4.4.0", features = ["derive"] }
jwalk    = "0.8.1"
serde    = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui  = "0.26.1"
crossterm = "0.27.0"
syntect  = "5.1.0"
# Lazy static initialization for syntax highlighting and theme sets
once_cell = "1.19"
git2 = { version = "0.18", default-features = false }
nucleo = "0.5"
chrono = { version = "0.4.45", features = ["std"] }
open = "5"
arboard = "3"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
toml = "0.8"
bat = "0.24"
ansi-to-tui = "4.0"
image = "0.24"
base64 = "0.21"



[package.metadata.deb]
maintainer = "Ahmed Ashour"
copyright = "2026, Ahmed Ashour"
section = "utils"
priority = "optional"
extended-description = """
AuraScope is a high-performance terminal workspace inspector and navigation
utility. It combines parallel directory scanning, interactive navigation,
live search, code previews, and shell warp integration into a single TUI.
"""
assets = [
  ["target/release/ascope", "usr/bin/ascope", "755"],
  ["src/shell/ascope.sh", "usr/share/ascope/ascope.sh", "644"],
  ["src/shell/ascope.ps1", "usr/share/ascope/ascope.ps1", "644"],
  ["README.md", "usr/share/doc/ascope/README.md", "644"],
]

[package.metadata.generate-rpm]
summary = "Blazingly fast terminal workspace inspector and navigation utility"
release = "1"
assets = [
  { source = "target/release/ascope", dest = "/usr/bin/ascope", mode = "755" },
  { source = "src/shell/ascope.sh", dest = "/usr/share/ascope/ascope.sh", mode = "644" },
  { source = "src/shell/ascope.ps1", dest = "/usr/share/ascope/ascope.ps1", mode = "644" },
  { source = "README.md", dest = "/usr/share/doc/ascope/README.md", mode = "644", doc = true },
]

[dev-dependencies]
tempfile = "3"
